WebInject

Copyright 2010 Sven Nierlein (nierlein@cpan.org)
Copyright 2004-2006 Corey Goldberg (corey@goldb.org)
For information and documentation, visit the website at http://www.webinject.org

---------------------------------
Release History:

Version 1.78 - Thu Jan  3 22:49:56 CET 2013
    - replace parsedresult in xml input file

Version 1.76 - Tue Nov 13 12:46:14 CET 2012
    - added new case option parsewarning

Version 1.74 - Sat May 12 13:36:48 CEST 2012
    - changed html output into tables (Karsten Sievert)
    - support gzipped content (Simone Tiraboschi)

Version 1.72 - Thu Feb  2 19:15:50 CET 2012
    - fixed using parsed results

Version 1.71 - Tue Jan  3 09:38:27 CET 2012
    - fixed nagios epn support or check_webinject

Version 1.70 - Sat Dec 10 12:40:03 CET 2011
    - variables with -s varname= are now case-insensitive

Version 1.69 - Tue Jul 12 10:25:17 CEST 2011
    - better error message when LWP::protocol::https is missing
    - read break_on_errors setting from config file too
    - added reportmode 'nagios2'
    - fixed display of passed testcases
    - cleaner output for nagios report type

Version 1.68 - Tue May 31 14:25:35 CEST 2011
    - add warning if parsed result does not match
    - made overwriting default options in check_webinject possible
    - fixed performance data for nagios report type

Version 1.67 - Thu Apr 28 16:52:29 CEST 2011
    - make parsed respones available in the errormessage

Version 1.66 - Tue Mar  8 19:18:04 CET 2011
    - fixed setting httpauth with -s

Version 1.64 - Sun Feb 27 18:37:16 CET 2011
    - fixed file upload
    - fixed some warnings

Version 1.62 - Sat Feb 19 16:24:56 CET 2011
    - fixed cpan package

Version 1.60 - Sat Feb 12 15:10:09 CET 2011
    - fixed ssl proxy support
    - added tests for proxy support

Version 1.58 - Tue Jan 25 20:15:35 CET 2011
    - really fixed problem with regular expression using whitespace (thanks Benoit Baron)

Version 1.57 - Sat Jan 22 00:34:56 CET 2011